samples/_failures_safe/1761077105_0572ed_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cb64898e.c: In function ‘tokenize’:
./samples/SAFE/__tmp_cb64898e.c:167:5: error: expected expression at end of input
  167 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_cb64898e.c:167:5: error: expected declaration or statement at end of input
